--- a/API/style.css
+++ b/API/style.css
@@ -1,21 +1,31 @@
 main{
     display: flex;
+    height: 100vh;
 }
 
 .usersList{
-    width: 20%;
+    width: 30%;
     border-right: 2px solid rgb(78, 69, 69);
     padding: 10px;
     margin-right: 15px;
+    overflow-y: auto;
 }
 
 .user, .post{
     border: 1px solid rgb(216, 204, 204);
-    padding: 10px;
+    padding: 3px 10px;
     margin: 12px 0;
     cursor: pointer;
 }
 
+.user:hover{
+    background-color: rgb(243, 240, 237);
+}
+
 .posts{
     width: 100%;
+}
+
+.selected{
+    background-color: aquamarine;
 }
